@@ -1,7 +1,7 @@
 //
 // Process_WIN32U.h
 //
-// $Id: //poco/1.3/Foundation/include/Poco/Process_WIN32U.h#3 $
+// $Id: //poco/1.3/Foundation/include/Poco/Process_WIN32U.h#4 $
 //
 // Library: Foundation
 // Package: Processes
@@ -81,6 +81,7 @@ public:
 	static ProcessHandleImpl* launchImpl(const std::string& command, const ArgsImpl& args, Pipe* inPipe, Pipe* outPipe, Pipe* errPipe);		
 	static void killImpl(PIDImpl pid);
 	static void requestTerminationImpl(PIDImpl pid);
+	static std::string terminationEventName(PIDImpl pid);
 };
 
 
